# SINP-G4CMP

./: Caustic.mac  Caustic_PhononDetectorConstruction.cc  Caustic_PhononPrimaryGeneratorAction.cc  Caustic_PhononPrimaryGeneratorAction.hh  README.md  extract_data.C  g4cmpPhononCaustics.cc
CEvNS/: Analytical_dsig_dT.root  CEvNSEnergySampler  CEvNSEnergySampler.cpp  CMakeLists.txt  Caustic.mac  Caustics_Plots.C  RecoilHistogram.root  Sampler_dsig_dT.root  accepted_points.txt  dsig_vs_T.txt  dsigma_dTReal.py  dsigma_dT_Sampler.py  g4cmpPhononCaustics.cc  neutrinoRecoilEn.py  recoil_data.txt  sampleFile.txt
CEvNS/include/: Caustic_PhononPrimaryGeneratorAction.hh
CEvNS/src/: Caustic_PhononPrimaryGeneratorAction.cc
Caustics/: Caustic.mac  Caustics_Plots.C  g4cmpPhononCaustics.cc
Caustics/src/: Caustic_PhononDetectorConstruction.cc  Caustic_PhononPrimaryGeneratorAction.cc  Caustic_PhononSensitivity.cc
DM-interaction/: CMakeLists.txt  DM-interaction.cc  combine.sh
DM-interaction/include/: DMActionInitialization.hh  DMConfigManager.hh  DMConfigMessenger.hh  DMDetectorConstruction.hh  DMPrimaryGeneratorAction.hh  DMRunAction.hh  DMSensitivity.hh  RunAction.hh
DM-interaction/src/: DMActionInitialization.cc  DMConfigManager.cc  DMConfigMessenger.cc  DMDetectorConstruction.cc  DMPrimaryGeneratorAction.cc  DMRunAction.cc  DMSensitivity.cc
Muon-Interaction/: CMakeLists.txt  g4cmpPhonon.cc  run.mac
Muon-Interaction/include/: My_G4CMPPhysicsList.hh  PhononActionInitialization.hh  PhononPrimaryGeneratorAction.hh  PhononSensitivity.hh
Muon-Interaction/src/: My_G4CMPPhysicsList.cc  PhononActionInitialization.cc  PhononPrimaryGeneratorAction.cc
Neutron-Interaction/: CMakeLists.txt  g4cmpPhonon.cc
Neutron-Interaction/include/: MyEventAction.hh  MySteppingAction.hh  My_G4CMPPhysicsList.hh  PhononDetectorConstruction.hh  PhononPrimaryGeneratorAction.hh  UserSteppingAction.hh
Neutron-Interaction/src/: MyEventAction.cc  MySteppingAction.cc  My_G4CMPPhysicsList.cc  PhononActionInitialization.cc  PhononDetectorConstruction.cc  PhononPrimaryGeneratorAction.cc  PhononSensitivity.cc  RunAction.cc  UserSteppingAction.cc
SM-interaction/: CMakeLists.txt  Multirun.sh  SM-interaction.cc  extract_data.C  extract_plots.C  run.mac
SM-interaction/include/: SMActionInitialization.hh  SMConfigManager.hh  SMConfigMessenger.hh  SMDetectorConstruction.hh  SMEventAction.hh  SMPhysicsList.hh  SMPrimaryGeneratorAction.hh  SMRunAction.hh  SMSensitivity.hh  SMSteppingAction.hh
SM-interaction/src/: SMActionInitialization.cc  SMConfigManager.cc  SMConfigMessenger.cc  SMDetectorConstruction.cc  SMEventAction.cc  SMPhysicsList.cc  SMPrimaryGeneratorAction.cc  SMRunAction.cc  SMSensitivity.cc  SMSteppingAction.cc
Signal_Response/phonon/: CMakeLists.txt  README  extract_plots.C  g4cmpPhonon.cc  run.mac  vis.mac
Signal_Response/phonon/include/: PhononActionInitialization.hh  PhononDetectorConstruction.hh  PhononPrimaryGeneratorAction.hh  RunAction.hh
Signal_Response/phonon/src/: MyEnergyPartition.cc  PhononActionInitialization.cc  PhononDetectorConstruction.cc  PhononPrimaryGeneratorAction.cc  RunAction.cc  (+1 more)
TES-response/include/: PhononDetectorConstruction.hh  PhononPrimaryGeneratorAction.hh
TES-response/src/: PhononDetectorConstruction.cc  PhononPrimaryGeneratorAction.cc  PhononSensitivity.cc
Utilities/: Thermal_Calc.hh
include/: Caustic_PhononPrimaryGeneratorAction.hh
